--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learn-nestjs",
+  "name": "nestquelize",
   "version": "0.0.1",
-  "description": "",
+  "description": "built on node.js, express.js, nest.js, sequelize ORM, postgreSQL",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -21,13 +21,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.4.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/sequelize": "^10.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sequelize-typescript": "^2.1.5",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/sequelize": "^4.28.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
