--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "singleQuote": true,
   "trailingComma": "none",
-  "bracketSpacing": true,
+  "tabWidth": 2,
   "semi": false,
-  "arrowParens": "avoid"
+  "singleQuote": true,
+  "spaceBeforeFunctionParen": true
 }
