--- a/.github/linters/.eslintrc.yml
+++ b/.github/linters/.eslintrc.yml
@@ -46,8 +46,22 @@ rules:
     'space-before-function-paren':
       [
         'error',
-        { 'anonymous': 'always', 'named': 'always', 'asyncArrow': 'always' }
-      ]
+        { 'anonymous': 'always', 'named': 'always', 'asyncArrow': 'always' },
+      ],
+    'comma-dangle':
+      [
+        'error',
+        {
+          arrays: 'always-multiline',
+          objects: 'always-multiline',
+          imports: 'always-multiline',
+          exports: 'always-multiline',
+          functions: 'only-multiline',
+        },
+      ],
+    'array-bracket-spacing': ['error', 'never'],
+    'object-curly-spacing': ['error', 'always'],
+    'computed-property-spacing': ['error', 'always'],
   }
 
 ##############################
