--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
-  "spaceBeforeFunctionParen": true
+  "spaceBeforeFunctionParen": false,
+  "bracketSpacing": true,
+  "bracketSameLine": false
 }
