--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "postgres": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sequelize": "^6.34.0",
+    "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.5",
     "typeorm": "^0.3.15"
   },
