--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "spaceBeforeFunctionParen": false,
+  "bracketSpacing": true,
+  "bracketSameLine": false
 }
