--- a/example.env
+++ b/example.env
@@ -1,12 +1,10 @@
 NODE_ENV='dev'
 PORT=3000
-
 DB_DIALECT='postgres'
 DB_HOST='localhost'
 DB_PORT=5432
 DB_USERNAME='username'
 DB_PASSWORD='password'
-
-DB_PROD_NAME='databaseprodname' # database name, must be different than $DB_DEB_NAME
-DB_TEST_NAME='databasedevname' # database name, must be different than $DB_PROD_NAME
-DB_DEV_NAME='databasedevname' # database name, must be different than $DB_PROD_NAME
+DB_PROD_NAME='databaseprodname'
+DB_TEST_NAME='databasedevname'
+DB_DEV_NAME='databasedevname'
