update seqlize-cli ver,migration implement

--- a/example.env
+++ b/example.env
@@ -1,8 +1,10 @@
-NODE_ENV='dev'
+NODE_ENV="dev"
 PORT=3000
-DB_DIALECT='postgres'
-DB_HOST='localhost'
+DB_DIALECT="postgres"
+DB_HOST="localhost"
 DB_PORT=5432
-DB_USERNAME='username'
-DB_PASSWORD='password'
-DB_NAME='databaseName'
+DB_USERNAME="username"
+DB_PASSWORD="password"
+DB_PROD_NAME="databaseprodname"
+DB_TEST_NAME="databasedevname"
+DB_DEV_NAME="databasedevname"
