--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,8 +55,9 @@ jobs:
           LINTER_RULES_PATH: /
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
           VALIDATE_JAVASCRIPT_STANDARD: false
-          # TYPESCRIPT_DEFAULT_STYLE: prettier # ts-standard # default is ts-standard
+          TYPESCRIPT_DEFAULT_STYLE: prettier # ts-standard # default is ts-standard
           # disabled for throwing trivial or non-sensical errors
+          VALIDATE_ENV: false # dotenv linter enforcing key-value pair to be in order. We want to group them by function/feature
           VALIDATE_HTML: false # err on .component.html, e.g: must include DOC=HTML at the start of every .html
           VALIDATE_POWERSHELL: false # error on .sh, i.e.: 'error  Parsing error: Unexpected token :'
           VALIDATE_SHELL_SHFMT: false # err on .sh, strict non-sense as there is no hint about what is wrong.
