--- a/package.json
+++ b/package.json
@@ -26,15 +26,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^10.0.0",
-    "@nestjs/typeorm": "^9.0.1",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize": "^6.34.0",
     "sequelize-cli": "~6.3.0",
-    "sequelize-typescript": "^2.1.5",
-    "typeorm": "^0.3.15"
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
