--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@nestjs/common": "^9.4.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "bcrypt": "^5.1.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
@@ -46,6 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.18",
     "@types/supertest": "^2.0.11",
