--- a/example.env
+++ b/example.env
@@ -8,3 +8,5 @@ DB_PASSWORD="password"
 DB_PROD_NAME="databaseprodname"
 DB_TEST_NAME="databasedevname"
 DB_DEV_NAME="databasedevname"
+JWT_KEY="jwtKey"
+JWT_EXPIRATION=3600
