npm i --save-dev @types/validator

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.18",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
